# tmlc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/tmlc/: __init__.py  evaluator.py
src/tmlc/compute/: __init__.py  axis.py  compute.py  index.py  initial_sketch.md  scalar.py  verify.py
src/tmlc/graph/: graph.py
src/tmlc/ops/: ops_arithmetic.py  ops_logarithmic.py  ops_shape.py
src/tmlc/tensor/: __init__.py  _operators.py  tensor.py  traits.py
src/tmlc/tensor/ops/: __init__.py  ops_arithmetic.py  ops_basic.py  ops_logarithmic.py  ops_shape.py
src/tmlc/transforms/: CSE.py  ConstantFold.py  __init__.py
src/tmlc/tsql/: __init__.py  matcher.py  p_any.py  p_const.py  p_eq.py  p_op.py  p_ref.py  p_var.py  pattern.py
src/tmlc/util/: __init__.py  topo_sort.py  types.py
tests/: constant_fold.py  cse.py  cse_and_cf.py  logreg.py  rewrite.py  scratch.py  tsql_basic.py
